Java 21 & micronaut 4.8.0